@@ -70,7 +70,6 @@ set ( CPACK_PACKAGE_VENDOR           "Jakub Neruda")
 set ( CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/nsis/description.txt" )
 set ( CPACK_PACKAGE_HOMEPAGE_URL     "https://nerudaj.itch.io/rend" )
 set ( CPACK_RESOURCE_FILE_LICENSE    "${CMAKE_SOURCE_DIR}/nsis/license.txt" )
-set ( CPACK_PACKAGE_EXECUTABLES      "${SETTINGS_BINARY_NAME}" "${CMAKE_SOURCE_DIR}/resources/graphics/appicon.ico" )
 
 if ( ${MAKE_INSTALLER} )
 	include(InstallRequiredSystemLibraries)
@@ -85,6 +84,15 @@ if ( ${MAKE_INSTALLER} )
 		"${PROJECT_SOURCE_DIR}/nsis"
 		${CMAKE_MODULE_PATH}
 	)
+    set ( CPACK_NSIS_DISPLAY_NAME "${SETTINGS_PROJECT_NAME}" )
+    set ( CPACK_NSIS_PACKAGE_NAME "${SETTINGS_PROJECT_NAME}" )
+    set ( CPACK_PACKAGE_INSTALL_DIRECTORY "${SETTINGS_PROJECT_NAME}" )
+    set ( CPACK_PACKAGE_INSTALL_REGISTRY_KEY "${SETTINGS_PROJECT_NAME}" )
+
+    list ( APPEND CPACK_NSIS_EXTRA_INSTALL_COMMANDS "  SetOutPath '$INSTDIR\\bin'" )
+    list ( APPEND CPACK_NSIS_EXTRA_INSTALL_COMMANDS "  CreateShortcut '$DESKTOP\\${SETTINGS_PROJECT_NAME}.lnk' '$INSTDIR\\bin\\${SETTINGS_BINARY_NAME}.exe'" )
+    list ( APPEND CPACK_NSIS_EXTRA_INSTALL_COMMANDS "  CreateShortcut '$SMPROGRAMS\\$STARTMENU_FOLDER\\${SETTINGS_PROJECT_NAME}.lnk' '$INSTDIR\\bin\\${SETTINGS_BINARY_NAME}.exe'" )
+    string (REPLACE ";" "\n" CPACK_NSIS_EXTRA_INSTALL_COMMANDS "${CPACK_NSIS_EXTRA_INSTALL_COMMANDS}")
 else()
 	set ( CPACK_GENERATOR "ZIP" )
 	if ( ${IS_NIGHTBUILD} )
