@@ -8,6 +8,10 @@ Rend 0.10.0 changelog:
 Gameplay:
 * Added new CTF map: "CTF Longway"
 
+Bugfixes:
+* Start Menu link generated by the installer now correctly launches the game
+    * Desktop link is also created
+
 UX:
 * Random map rotation can be chosen in game setup lobby
 * Game setup lobby configuration is remembered
